fix background behind icons

--- a/src/components/pages/clientServices/personalFinances/personalFinances.scss
+++ b/src/components/pages/clientServices/personalFinances/personalFinances.scss
@@ -83,7 +83,6 @@
   display: inline-block;
   height: 3rem;
   width: 3rem;
-  background-color: var(--grey-40);
   border-radius: 0.5rem;
   border: none;
 }
